--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -534,7 +534,7 @@
                                         </connections>
                                     </button>
                                 </subviews>
-                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="0.80000000000000004" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="0.75" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="wgZ-Na-6RE" secondAttribute="trailing" id="Dxi-Ga-qdM"/>
                                     <constraint firstItem="QME-dB-nQi" firstAttribute="leading" secondItem="o24-d3-1b2" secondAttribute="leading" constant="20" id="MYJ-8Q-Ve0"/>
